--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^8.2.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
